added material list module

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,1 +1,4 @@
-<p>sidebar works!</p>
+<mat-list role="list">
+  <mat-list-item role="listitem"><a href="create">Add user</a></mat-list-item>
+  <mat-list-item role="listitem"><a href="list">List Users</a></mat-list-item>
+</mat-list>
