Implemented parent/child routes to identify user crud methods

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
 <mat-list role="list">
-  <mat-list-item role="listitem"><a href="create">Add user</a></mat-list-item>
-  <mat-list-item role="listitem"><a href="list">List Users</a></mat-list-item>
+  <mat-list-item role="listitem"><a href="users/create">Add user</a></mat-list-item>
+  <mat-list-item role="listitem"><a href="users/list">List Users</a></mat-list-item>
 </mat-list>
