--- a/src/app/users/add-user/add-user.component.html
+++ b/src/app/users/add-user/add-user.component.html
@@ -1,1 +1,30 @@
-<p>add-user works!</p>
+<mat-card>
+  <mat-card-title>Add new user</mat-card-title>
+  <mat-card-content>
+
+    <form [formGroup]="addUserForm" (submit)="createUser()">
+      <p>
+        <mat-form-field appearance="outline">
+          <mat-label>User name</mat-label>
+          <input matInput placeholder="Placeholder" formControlName="username">
+        </mat-form-field>
+      </p>
+
+      <p>
+        <mat-form-field appearance="outline">
+          <mat-label>Email address</mat-label>
+          <input matInput placeholder="Placeholder" formControlName="email">
+        </mat-form-field>
+      </p>
+
+      <p>
+        <mat-form-field appearance="outline">
+          <mat-label>Phone number</mat-label>
+          <input matInput placeholder="Placeholder" formControlName="phone">
+        </mat-form-field>
+      </p>
+      <p><button mat-raised-button color="primary">Add user</button></p>
+    </form>
+
+</mat-card-content>
+</mat-card>
