card not needed

--- a/src/app/users/add-user/add-user.component.html
+++ b/src/app/users/add-user/add-user.component.html
@@ -1,6 +1,4 @@
-<mat-card>
-  <mat-card-title>Add new user</mat-card-title>
-  <mat-card-content>
+  <h2>Add new user</h2>
 
     <form [formGroup]="addUserForm" (submit)="createUser()">
       <p>
@@ -25,6 +23,3 @@
       </p>
       <p><button mat-raised-button color="primary">Add user</button></p>
     </form>
-
-</mat-card-content>
-</mat-card>
